[package]
name = "wkt"
version = "0.14.0"
description = "Rust read/write support for well-known text (WKT)"
edition = "2021"
rust-version = "1.78.0"

license = "MIT OR Apache-2.0"
repository = "https://github.com/TimTheBig/wkt"
autobenches = true
readme = "README.md"
keywords = ["geo", "geospatial", "wkt", "3d", "geo-3d"]

[dependencies]
geo-types = { version = "0.9.0", git = "https://github.com/TimTheBig/geo-3d.git" }
geo-traits = { version = "0.4", git = "https://github.com/TimTheBig/geo-3d.git" }
num-traits = "0.2"
serde = { version = "1.0", default-features = false, optional = true }
thiserror = "2.0"
log = "0.4"

[dev-dependencies]
criterion = ">=0.5.1"
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde_json = "1.0"

[[bench]]
name = "parse"
harness = false

[[bench]]
name = "write"
harness = false

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
